--- a/src/templates/signup.html
+++ b/src/templates/signup.html
@@ -1,12 +1,12 @@
 {% include "include_this.html" %}
-    <form class="form-signin" action="" method="POST">
-        <h2 class="form-signin-heading">Sign Up</h2>
+    <form action="" method="POST">
+        <h2 >Sign Up</h2>
         {{ signupform.username(placeholder="User Name")}}
         {{ signupform.password(placeholder="Password") }}
         {{ signupform.userAccess(id='userAccess', onchange="makeVisible()") }}
         {{ signupform.branchArea }}
-        {{ signupform.branchUnitName(placeholder="Branch Unit Name", id='unitName') }}
         {{ signupform.selBranchType(id='branchType') }}
+        {{ signupform.branchUnitName(placeholder="Branch Unit Name", id='unitName') }}
         {{ signupform.submit}}
     </form>
     <h6> {{ error }}</h6>
@@ -26,7 +26,6 @@
               <td> Shop </td>
           {%elif col == '1' %}
               <td> Stock House </td>
-              {%break%}
           {%elif col == 'M' or col == 'O'%}
               <td> {{col}} </td>
               {%break%}
