--- a/src/templates/signup.html
+++ b/src/templates/signup.html
@@ -1,12 +1,12 @@
 {% include "include_this.html" %}
     <form action="" method="POST">
-        <h2 >Sign Up</h2>
+        <h2 >Update User</h2>
         {{ signupform.username(placeholder="User Name")}}
         {{ signupform.password(placeholder="Password") }}
         {{ signupform.userAccess(id='userAccess', onchange="makeVisible()") }}
-        {{ signupform.branchArea }}
-        {{ signupform.selBranchType(id='branchType') }}
-        {{ signupform.branchUnitName(placeholder="Branch Unit Name", id='unitName') }}
+        {{ signupform.branchArea(id='branchArea', onchange="getBranchUnitNames()")}}
+        {{ signupform.branchOutletOrNot(id='branchOutletOrNot', onchange="getBranchUnitNames()")}}
+        {{ signupform.branchUnitName(placeholder="Branch Unit Name", id='branchUnitName') }}
         {{ signupform.submit}}
     </form>
     <h6> {{ error }}</h6>
@@ -22,10 +22,10 @@
   {% for rows in userLog %}
   <tr>
       {%for col in rows %}
-          {%if col == '0' %}
+          {%if col == '1' %}
               <td> Shop </td>
-          {%elif col == '1' %}
-              <td> Stock House </td>
+          {%elif col == '0' %}
+              <td> Storage </td>
           {%elif col == 'M' or col == 'O'%}
               <td> {{col}} </td>
               {%break%}
@@ -41,11 +41,12 @@
 <script>
     window.onload = function() {
       makeVisible();
+      getBranchUnitNames();
     };
 
   function makeVisible() {
-      x = document.getElementById("branchType");
-      y = document.getElementById("unitName");
+      x = document.getElementById("branchOutletOrNot");
+      y = document.getElementById("branchUnitName");
       z = document.getElementById("userAccess");
       x.style.display ='';
       y.style.display ='';
@@ -55,4 +56,22 @@
           y.style.display='none';
       }
   }
+  function getBranchUnitNames() {
+      let x = document.getElementById("branchArea");
+      let y = document.getElementById("branchOutletOrNot");
+      let z = document.getElementById("branchUnitName");
+      branchArea = x.value;
+      branchOutletOrNot = y.value;
+      fetch('/branchUnitName/'+ branchArea + '/' + branchOutletOrNot).then(function(response){
+         response.json().then(function(data){
+             let optionHtml = '';
+             for(let branchUnitName of data.branchUnitNames) {
+                 optionHtml += '<option value"' + branchUnitName.id + '">' + branchUnitName.name + '</option>';
+             }
+             z.innerHTML = optionHtml;
+         });
+      });
+  }
+
+
 </script>
