--- a/src/templates/branch.html
+++ b/src/templates/branch.html
@@ -26,9 +26,9 @@
       {% for rows in branchLog %}
       <tr>
           {%for col in rows %}
-              {%if col == '1' %}
+              {%if col == 'B' %}
                   <td> Shop </td>
-              {%elif col == '0' %}
+              {%elif col == 'N' %}
                   <td> Storage </td>
               {% else %}
                   <td> {{col}} </td>
