--- a/src/templates/searchInventory.html
+++ b/src/templates/searchInventory.html
@@ -77,4 +77,12 @@ function makeVisible(){
     }
 
 }
+
+// $(document).ready(function() {
+//     $('#itemName').select2({
+//     placeholder: "{{ searchInventoryForm.itemName.label.text }}",
+//     allowClear: true,
+//     "width": "style"
+// });
+// });
 </script>
